--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -20,8 +20,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.mc.instance_messgage.SplashActivity"
+            android:label="@string/app_name"
+            android:theme="@style/Splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,9 +30,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MagnifyActivity" />
+            android:name="com.mc.instance_messgage.MainActivity"
+            android:label="@string/app_name" >
+            
+        </activity>
+        <activity
+            android:name="com.mc.instance_messgage.MagnifyActivity" />
         <activity 
-            android:name=".RecordActivity"
+            android:name="com.mc.instance_messgage.RecordActivity"
             android:theme="@android:style/Theme.Dialog"/>
     </application>
 
